# template-repo-py

./: .gitignore  .isort.cfg  .pylintrc  DEVELOPMENT.md  README.md  pyproject.toml  pytest.ini  run.sh  setup.py
.github/: dependabot.yml
.github/workflows/: build-container.yml  dependabot.yml
build-support/docker/: Dockerfile  adduser.sh  install-asdf.sh  install-poetry.sh  install-python.sh
build-support/shell/run/: config.sh
docs/: index.html
docs/_src/: conf.py  index.md  index.rst  root.rst
scripts/: make-pip-release.sh  remove-dev-files.sh  remove-tests.sh
tests/template_repo_py/: test_template_repo_py.py
