[tool.black]
include = "\\.pyi?$"
line-length = 120
# Should match Poetry Python version setting
target-version = ["py38"]

[tool.poetry]
name = "template-repo-py"
version = "0.1.0"
description = "Template repository for Python projects"
authors = ["Libcommon <57610970+libcommon@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "template_repo_py", from = "src" }
]
include = [
    "src/**/py.typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "~22.3.0"
isort = "~5.10.0"
mypy = "<1.0"
myst-parser = "~0.17.2"
pylint = "~2.13.8"
pytest = "~7.1.0"
pytest-cov = "~3.0.0"
sphinx = "~4.5.0"
sphinx-autodoc-typehints = "~1.18.1"
sphinx-copybutton = "~0.5.0"
sphinx-material = "0.0.35"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
